⚡️perf: header, phpの不要ファイル削除

--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,16 @@
       href="https://64.media.tumblr.com/avatar_563013216987_64.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <title>mieze illustration</title>
     <meta
       name="description"
       content="by Ayu Nakata. Osaka, Japan-based illustrator/artist."
     />
+    <meta name="author" content="Ayu Nakata" />
     <link rel="apple-touch-icon" />
     <!--https://developers.google.com/web/fundamentals/web-app-manifest/-->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>mieze illustration</title>
+    <meta name="theme-color" content="#000000" />
     <link rel="canonical" href="https://www.mieze018.net" />
     <link
       rel="alternate"
