⚡️perf: 真ん中揃えできたとこまで

--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,25 @@
       type="application/rss+xml"
       href="https://www.mieze018.net/rss"
     />
+    <!-- Google 構造化データ マークアップ支援ツールが生成した JSON-LD マークアップです。 -->
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "Article",
+        "name": "mieze illustration",
+        "datePublished": "2009-01-01",
+        "author": {
+          "@type": "Person",
+          "name": "Ayu Nakata"
+        },
+
+        "image": "https://64.media.tumblr.com/c8cbffda79ebe5a921c9febed81fff0d/tumblr_pqsh79WkfB1qzr8cuo1_540.jpg",
+        "url": "https://www.mieze018.net/"
+      }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" style="margin: auto"></div>
   </body>
 </html>
