--- a/public/index.html
+++ b/public/index.html
@@ -44,4 +44,18 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" style="margin: auto"></div>
   </body>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=UA-51110500-1"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-51110500-1');
+  </script>
 </html>
