--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="margin: auto"></div>
+    <div id="root"></div>
   </body>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script
