⚡️perf: ファビコン画像が巨大だったので自前で用意して取得しないようにした

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="icon"
-      href="https://64.media.tumblr.com/avatar_563013216987_64.png"
-    />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>mieze illustration</title>
     <meta
