--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
     <div id="root"></div>
   </body>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script
+  <!-- <script
     async
     src="https://www.googletagmanager.com/gtag/js?id=UA-51110500-1"
   ></script>
@@ -54,5 +54,5 @@
     gtag('js', new Date());
 
     gtag('config', 'UA-51110500-1');
-  </script>
+  </script> -->
 </html>
