--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
       }
     </script>
   </head>
-  <body>
+  <body style="min-height: 101vh">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
