--- a/public/index.html
+++ b/public/index.html
@@ -32,10 +32,16 @@
           "name": "Ayu Nakata"
         },
 
-        "image": "https://64.media.tumblr.com/c8cbffda79ebe5a921c9febed81fff0d/tumblr_pqsh79WkfB1qzr8cuo1_540.jpg",
+        "image": "%PUBLIC_URL%/favicon.webp",
         "url": "https://www.mieze018.net/"
       }
     </script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body style="min-height: 101vh">
     <noscript>You need to enable JavaScript to run this app.</noscript>
